Fix hotel flow, review, refund, ....